--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Super Safe Message</title>
+    <title>超级安全消息传递</title>
 </head>
 
 <body>
@@ -15,11 +15,11 @@
     </style>
     <h1>SuperSafeMessage</h1>
     <div class="receiver-panel">
-        <a href="">Wait...</a>
-        <p>Share above link and wait for message</p>
-        <p>Don't close this page or you will never receive the message from the link.</p>
-        <button id="refresh-btn">Refresh Received Message</button>
-        <h2>Received Message:</h2>
+        <a href="">请稍等...</a>
+        <p>将此链接发给需要互相传递信息的人，然后等待对方发送消息</p>
+        <p>请暂时不要关闭这个页面，不然你将收不到对方发来的消息.</p>
+        <button id="refresh-btn">手动刷新接受(对方发送)的信息</button>
+        <h2>接收的信息如下:</h2>
         <div id="messages"></div>
     </div>
     <div class="sender-panel">
