--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             display: none;
         }
     </style>
-    <h1>SuperSafeMessage</h1>
+    <h1>Super Safe Message</h1>
     <div class="receiver-panel">
         <a href="">Wait...</a>
         <p>Share above link and wait for message</p>
-        <p>Don't close this page or you will never receive the message from the link.</p>
+        <p>Don't close/refresh this page or you will never receive the message from the link.</p>
         <button id="refresh-btn">Refresh Received Message</button>
         <h2>Received Message:</h2>
         <div id="messages"></div>
@@ -27,6 +27,24 @@
         <button id="send-btn">Send</button>
         <p id="send-status"></p>
     </div>
+    <dvi>
+        <br>
+        <hr>
+        <h2>Safe Tips</h2>
+        <p>Use a clean and updated system, along with the latest browser, and avoid installing any third-party
+            certificates.
+        </p>
+
+
+        <p>Turn off all browser extensions, open the browser in private or incognito mode, read the messages, remember
+            them,
+            and then close the browser without saving any information on your device.</p>
+
+        <p>Make sure to confirm that your recipients and senders are who they say they are, and double-check that the
+            links
+            you share haven't been tampered with. Keep in mind that this step may not be needed for everyone.</p>
+        </div>
+    </dvi>
     <script>
         const host = "https://summer-salad-6492.maggch.workers.dev/"
 
