--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <p>Make sure to confirm that your recipients and senders are who they say they are, and double-check that the
             links
-            you share haven't been tampered with. Keep in mind that this step may not be needed for everyone.</p>
+            you share haven't been tampered with. (This step may not be needed for most people.</p>
         </div>
     </dvi>
     <script>
