--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <button id="send-btn">Send</button>
         <p id="send-status"></p>
     </div>
-    <dvi>
+    <div>
         <br>
         <hr>
         <h2>Safe Tips</h2>
@@ -44,7 +44,7 @@
             links
             you share haven't been tampered with. (This step may not be needed for most people.</p>
         </div>
-    </dvi>
+    </div>
     <script>
         const host = "https://summer-salad-6492.maggch.workers.dev/"
 
