Use a larger key size

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a href="/zh_cn.html">中文</a>
 
     <h1>Super Safe Message</h1>
-    <h5>World's Safest Way to Share Message</h5>
+    <h5>World's Safest Way to Share Message: Securely transfer your passwords, credentials, private photos, and all important information.</h5>
 
     <div class="receiver-panel">
         <a id="share-link" href="" target="_blank">Wait...</a>
@@ -80,7 +80,7 @@
             const { publicKey, privateKey } = await window.crypto.subtle.generateKey(
                 {
                     name: 'RSA-OAEP',
-                    modulusLength: 2048,
+                    modulusLength: 4096,
                     publicExponent: new Uint8Array([1, 0, 1]),
                     hash: { name: 'SHA-256' },
                 },
@@ -250,7 +250,7 @@
                 const img = new Image();
                 const canvas = document.createElement('canvas');
                 const ctx = canvas.getContext('2d');
-                const maxSize = 142 * 1024;
+                const maxSize = 167 * 1024;
                 img.onload = () => {
                     canvas.width = img.width;
                     canvas.height = img.height;
