--- a/zh_cn.html
+++ b/zh_cn.html
@@ -48,7 +48,7 @@
         }
     </style>
     <script>
-        const host = "https://ssm-proxy.maggch.workers.dev/";
+        const host = "https://api.supersafemessage.com/";
 
         async function receive(receiver) {
             const api = new URL(host + "receive");
