--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         }
     </style>
     <script>
-        const host = "https://ssm-proxy.maggch.workers.dev/";
+        const host = "https://api.supersafemessage.com/";
 
         async function receive(receiver) {
             const api = new URL(host + "receive");
